sessions/03-ingress/subsessions/11-optional-istio-ingress-gateway/02-message-board-ingress-istio.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: message-board-ingress-istio
  namespace: app-ingress
spec:
  ingressClassName: istio
  rules:
    - http:
        paths:
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 5001
          - path: /api/apps
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 5002
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
